# autogen-groupchat-withUI

./: .gitignore  README.md  agent_library.json  app.py  pyproject.toml  writers_room.py
groupchatweb/: README.md
groupchatweb/backend/: .gitignore  agent_library.json  autogen_group_chat.py  groupchatweb.py  main.py  pyproject.toml  user_proxy_webagent.py
groupchatweb/react-frontend/src/: App.jsx
groupchatweb/react-frontend/src/components/chat/layout/: Chat.jsx  ChatDialog.jsx
multi-agent_examples/: chess_example.py  group_chat_1.py  group_chat_2.py  group_chat_3.py
multi-modal_examples/: image_explainer.py  image_generator.py  web_surfer.py
writer_construct/: agent_library_test.json  prompt_templates.json  team_builder.py
